style changes to avoid text hiding on firefox

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ div.cell { /* set cell width */
 
 div #notebook { /* centre the content */
     background: #fff; /* white background for content */
-    width: 900px;
+    width: 1000px;
     margin: auto;
     padding-left: 0em;
 }
@@ -53,11 +53,11 @@ div.input_area {
     background: rbga(0,0,0,0.5);
 }
 
-/*
+
 div.text_cell {
     max-width: 105ex; /* instead of 100%, */
 }
-*/
+
 
 div.text_cell_render {
     font-family: "Crimson Text";
